--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "generate-readme": "node scripts/generate-readme.js"
   },
   "dependencies": {
     "@fontsource/inter": "^5.2.8",
